@@ -1,6 +1,6 @@
 /* tc-mmix.c -- Assembler for Don Knuth's MMIX.
-   Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,
-   2012  Free Software Foundation.
+   Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007
+   Free Software Foundation.
 
    This file is part of GAS, the GNU Assembler.
 
@@ -27,8 +27,8 @@
    compatible syntax, but the main purpose is to serve GCC.  */
 
 
-#include "as.h"
 #include <limits.h>
+#include "as.h"
 #include "subsegs.h"
 #include "elf/mmix.h"
 #include "opcode/mmix.h"
@@ -40,11 +40,11 @@
    for example assert something of what it became or make a relocation.  */
 
 enum mmix_fixup_action
-{
-  mmix_fixup_byte,
-  mmix_fixup_register,
-  mmix_fixup_register_or_adjust_for_byte
-};
+ {
+   mmix_fixup_byte,
+   mmix_fixup_register,
+   mmix_fixup_register_or_adjust_for_byte
+ };
 
 static int get_spec_regno (char *);
 static int get_operands (int, char *, expressionS *);
@@ -108,13 +108,6 @@ static struct
    char *label;
    expressionS exp;
  } mmix_raw_gregs[MAX_GREGS];
-
-static struct loc_assert_s
- {
-   segT old_seg;
-   symbolS *loc_sym;
-   struct loc_assert_s *next;
- } *loc_asserts = NULL;
 
 /* Fixups for all unique GREG registers.  We store the fixups here in
    md_convert_frag, then we use the array to convert
@@ -1680,10 +1673,7 @@ md_assemble (char *str)
       break;
 
     case mmix_operands_xyz_opt:
-      /* SWYM, TRIP, TRAP: zero, one, two or three operands.  It's
-	 unspecified whether operands are registers or constants, but
-	 when we find register syntax, we require operands to be literal and
-	 within 0..255.  */
+      /* SWYM, TRIP, TRAP: zero, one, two or three operands.  */
       if (n_operands == 0 && ! mmix_gnu_syntax)
 	/* Zeros are in place - nothing needs to be done for zero
 	   operands.  We don't allow this in GNU syntax mode, because it
@@ -1694,7 +1684,7 @@ md_assemble (char *str)
 	{
 	  if (exp[0].X_op == O_constant)
 	    {
-	      if (exp[0].X_add_number > 255*256*256
+	      if (exp[0].X_add_number > 255*255*255
 		  || exp[0].X_add_number < 0)
 		{
 		  as_bad (_("invalid operands to opcode %s: `%s'"),
@@ -1736,7 +1726,7 @@ md_assemble (char *str)
 
 	  if (exp[1].X_op == O_constant)
 	    {
-	      if (exp[1].X_add_number > 255*256
+	      if (exp[1].X_add_number > 255*255
 		  || exp[1].X_add_number < 0)
 		{
 		  as_bad (_("invalid operands to opcode %s: `%s'"),
@@ -1808,15 +1798,12 @@ md_assemble (char *str)
 	    fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 3,
 			 1, exp + 2, 0, BFD_RELOC_8);
 	}
-      else
+      else if (n_operands <= 3
+	       && (strcmp (instruction->name, "trip") == 0
+		   || strcmp (instruction->name, "trap") == 0))
 	{
-	  /* We can't get here for other cases.  */
-	  gas_assert (n_operands <= 3);
-
-	  /* The meaning of operands to TRIP and TRAP is not defined (and
-	     SWYM operands aren't enforced in mmixal, so let's avoid
-	     that).  We add combinations not handled above here as we find
-	     them and as they're reported.  */
+	  /* The meaning of operands to TRIP and TRAP are not defined, so
+	     we add combinations not handled above here as we find them.  */
 	  if (n_operands == 3)
 	    {
 	      /* Don't require non-register operands.  Always generate
@@ -1824,47 +1811,48 @@ md_assemble (char *str)
 		 maintenance problems.  TRIP is supposed to be a rare
 		 instruction, so the overhead should not matter.  We
 		 aren't allowed to fix_new_exp for an expression which is
-		 an O_register at this point, however.
-
-		 Don't use BFD_RELOC_MMIX_REG_OR_BYTE as that modifies
-		 the insn for a register in the Z field and we want
-		 consistency.  */
+		 an  O_register at this point, however.  */
 	      if (exp[0].X_op == O_register)
 		opcodep[1] = exp[0].X_add_number;
 	      else
 		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 1,
-			     1, exp, 0, BFD_RELOC_8);
+			     1, exp, 0, BFD_RELOC_MMIX_REG_OR_BYTE);
 	      if (exp[1].X_op == O_register)
 		opcodep[2] = exp[1].X_add_number;
 	      else
 		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 2,
-			     1, exp + 1, 0, BFD_RELOC_8);
+			     1, exp + 1, 0, BFD_RELOC_MMIX_REG_OR_BYTE);
 	      if (exp[2].X_op == O_register)
 		opcodep[3] = exp[2].X_add_number;
 	      else
 		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 3,
-			     1, exp + 2, 0, BFD_RELOC_8);
+			     1, exp + 2, 0, BFD_RELOC_MMIX_REG_OR_BYTE);
 	    }
 	  else if (n_operands == 2)
 	    {
 	      if (exp[0].X_op == O_register)
-		opcodep[1] = exp[0].X_add_number;
+		opcodep[2] = exp[0].X_add_number;
 	      else
-		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 1,
-			     1, exp, 0, BFD_RELOC_8);
+		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 2,
+			     1, exp, 0, BFD_RELOC_MMIX_REG_OR_BYTE);
 	      if (exp[1].X_op == O_register)
 		opcodep[3] = exp[1].X_add_number;
 	      else
-		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 2,
-			     2, exp + 1, 0, BFD_RELOC_16);
+		fix_new_exp (opc_fragP, opcodep - opc_fragP->fr_literal + 3,
+			     1, exp + 1, 0, BFD_RELOC_MMIX_REG_OR_BYTE);
 	    }
 	  else
 	    {
-	      /* We can't get here for other cases.  */
-	      gas_assert (n_operands == 1 && exp[0].X_op == O_register);
-
-	      opcodep[3] = exp[0].X_add_number;
+	      as_bad (_("unsupported operands to %s: `%s'"),
+		      instruction->name, operands);
+	      return;
 	    }
+	}
+      else
+	{
+	  as_bad (_("invalid operands to opcode %s: `%s'"),
+		  instruction->name, operands);
+	  return;
 	}
       break;
 
@@ -2001,11 +1989,10 @@ static void
 mmix_greg_internal (char *label)
 {
   expressionS *expP = &mmix_raw_gregs[n_of_raw_gregs].exp;
-  segT section;
 
   /* Don't set the section to register contents section before the
      expression has been parsed; it may refer to the current position.  */
-  section = expression (expP);
+  expression (expP);
 
   /* FIXME: Check that no expression refers to the register contents
      section.  May need to be done in elf64-mmix.c.  */
@@ -2017,24 +2004,6 @@ mmix_greg_internal (char *label)
       expP->X_unsigned = 0;
       expP->X_add_symbol = NULL;
       expP->X_op_symbol = NULL;
-    }
-
-  if (section == undefined_section)
-    {
-      /* This is an error or a LOC with an expression involving
-	 forward references.  For the expression to be correctly
-	 evaluated, we need to force a proper symbol; gas loses track
-	 of the segment for "local symbols".  */
-      if (expP->X_op == O_add)
-	{
-	  symbol_get_value_expression (expP->X_op_symbol);
-	  symbol_get_value_expression (expP->X_add_symbol);
-	}
-      else
-	{
-	  gas_assert (expP->X_op == O_symbol);
-	  symbol_get_value_expression (expP->X_add_symbol);
-	}
     }
 
   /* We must handle prefixes here, as we save the labels and expressions
@@ -2873,7 +2842,7 @@ tc_gen_reloc (asection *section ATTRIBUTE_UNUSED, fixS *fixP)
     }
 
   relP = (arelent *) xmalloc (sizeof (arelent));
-  gas_assert (relP != 0);
+  assert (relP != 0);
   relP->sym_ptr_ptr = (asymbol **) xmalloc (sizeof (asymbol *));
   *relP->sym_ptr_ptr = baddsy;
   relP->address = fixP->fx_frag->fr_address + fixP->fx_where;
@@ -3483,7 +3452,6 @@ mmix_md_end (void)
   fragS *fragP;
   symbolS *mainsym;
   asection *regsec;
-  struct loc_assert_s *loc_assert;
   int i;
 
   /* The first frag of GREG:s going into the register contents section.  */
@@ -3539,29 +3507,6 @@ mmix_md_end (void)
     {
       symbol_get_bfdsym (mainsym)->flags |= BSF_FUNCTION;
       S_SET_EXTERNAL (mainsym);
-    }
-
-  /* Check that we didn't LOC into the unknown, or rather that when it
-     was unknown, we actually change sections.  */
-  for (loc_assert = loc_asserts;
-       loc_assert != NULL;
-       loc_assert = loc_assert->next)
-    {
-      segT actual_seg;
-
-      resolve_symbol_value (loc_assert->loc_sym);
-      actual_seg = S_GET_SEGMENT (loc_assert->loc_sym);
-      if (actual_seg != loc_assert->old_seg)
-	{
-	  char *fnam;
-	  unsigned int line;
-	  int e_valid = expr_symbol_where (loc_assert->loc_sym, &fnam, &line);
-
-	  gas_assert (e_valid == 1);
-	  as_bad_where (fnam, line,
-			_("LOC to section unknown or indeterminable "
-			  "at first pass"));
-	}
     }
 
   if (n_of_raw_gregs != 0)
@@ -3942,28 +3887,11 @@ s_loc (int ignore ATTRIBUTE_UNUSED)
 
   if (exp.X_op == O_illegal
       || exp.X_op == O_absent
-      || exp.X_op == O_big)
+      || exp.X_op == O_big
+      || section == undefined_section)
     {
       as_bad (_("invalid LOC expression"));
       return;
-    }
-
-  if (section == undefined_section)
-    {
-      /* This is an error or a LOC with an expression involving
-	 forward references.  For the expression to be correctly
-	 evaluated, we need to force a proper symbol; gas loses track
-	 of the segment for "local symbols".  */
-      if (exp.X_op == O_add)
-	{
-	  symbol_get_value_expression (exp.X_op_symbol);
-	  symbol_get_value_expression (exp.X_add_symbol);
-	}
-      else
-	{
-	  gas_assert (exp.X_op == O_symbol);
-	  symbol_get_value_expression (exp.X_add_symbol);
-	}
     }
 
   if (section == absolute_section)
@@ -4037,9 +3965,7 @@ s_loc (int ignore ATTRIBUTE_UNUSED)
 	}
     }
 
-  /* If we can't deduce the section, it must be the current one.
-     Below, we arrange to assert this.  */
-  if (section != now_seg && section != undefined_section)
+  if (section != now_seg)
     {
       obj_elf_section_change_hook ();
       subseg_set (section, 0);
@@ -4050,41 +3976,16 @@ s_loc (int ignore ATTRIBUTE_UNUSED)
 
   if (exp.X_op != O_absent)
     {
-      symbolS *esym = NULL;
-
       if (exp.X_op != O_constant && exp.X_op != O_symbol)
 	{
 	  /* Handle complex expressions.  */
-	  esym = sym = make_expr_symbol (&exp);
+	  sym = make_expr_symbol (&exp);
 	  off = 0;
 	}
       else
 	{
 	  sym = exp.X_add_symbol;
 	  off = exp.X_add_number;
-
-	  if (section == undefined_section)
-	    {
-	      /* We need an expr_symbol when tracking sections.  In
-		 order to make this an expr_symbol with file and line
-		 tracked, we have to make the exp non-trivial; not an
-		 O_symbol with .X_add_number == 0.  The constant part
-		 is unused.  */
-	      exp.X_add_number = 1;
-	      esym = make_expr_symbol (&exp);
-	    }
-	}
-
-      /* Track the LOC's where we couldn't deduce the section: assert
-	 that we weren't supposed to change section.  */
-      if (section == undefined_section)
-	{
-	  struct loc_assert_s *next = loc_asserts;
-	  loc_asserts
-	    = (struct loc_assert_s *) xmalloc (sizeof (*loc_asserts));
-	  loc_asserts->next = next;
-	  loc_asserts->old_seg = now_seg;
-	  loc_asserts->loc_sym = esym;
 	}
 
       p = frag_var (rs_org, 1, 1, (relax_substateT) 0, sym, off, (char *) 0);
@@ -4102,6 +4003,7 @@ static void
 mmix_byte (void)
 {
   unsigned int c;
+  char *start;
 
   if (now_seg == text_section)
     text_has_contents = 1;
@@ -4115,6 +4017,7 @@ mmix_byte (void)
 	{
 	case '\"':
 	  ++input_line_pointer;
+	  start = input_line_pointer;
 	  while (is_a_char (c = next_char_of_string ()))
 	    {
 	      FRAG_APPEND_1_CHAR (c);
@@ -4190,6 +4093,7 @@ static void
 mmix_cons (int nbytes)
 {
   expressionS exp;
+  char *start;
 
   /* If we don't have any contents, then it's ok to have a specified start
      address that is not a multiple of the max data size.  We will then
@@ -4270,6 +4174,7 @@ mmix_cons (int nbytes)
 	       bytes.  */
 	  case '\"':
 	    ++input_line_pointer;
+	    start = input_line_pointer;
 	    while (is_a_char (c = next_char_of_string ()))
 	      {
 		exp.X_op = O_constant;
